refactored mass import feature to be similar to current format used in subject